HND-59 Adds trails index, destroy and show api routes and related docs
